--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Hello World! I’m [username]. This is my GitHub website!</p>
+<p>Hello World! I’m @ShawnRahlTR. This is my GitHub website!</p>
 
 </body>
 </html>
