--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
 
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
+<img src="https://d2a2wjuuf1c30f.cloudfront.net/product_photos/58410309/alien_20head_original.png" id="alienhead" alt="alien-head" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Hello World! I’m @ShawnRahlTR. This is my GitHub website!</p>
+  <p>Hello World! I’m <a href="https://shawnrahltr.github.io/>ShawnRahlTR</a>. This is my GitHub website!</p>
 
 </body>
 </html>
