--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 
 <body>
 
-<img src="https://d2a2wjuuf1c30f.cloudfront.net/product_photos/58410309/alien_20head_original.png" id="octocat" alt="alien-head" />
-
-<!-- Change this code here by copy and pasting your template on line 15 -->
-  <p><a href="https://shawnrahltr.github.io">ShawnRahlTR</a></p>
+<p><a href="https://shawnrahltr.github.io"><img src="https://shawnrahltr.github.io/images/alien_20head_original.png" id="octocat" alt="alien-head" /></a></p>
 
 </body>
 </html>
