--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>shawnrahltr@github</title>
+  <title>sr-tr@github</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
